--- a/lui-server/package.json
+++ b/lui-server/package.json
@@ -2,10 +2,19 @@
   "name": "lui-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lui-src/lui-server.coffee",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "connect-mongodb-session": "^2.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "mongodb": "^3.3.5",
+    "nodemon": "^2.0.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
+  }
 }
